- Cleaned up login and register - Added style to login and register editTexts - Added animation to login and register

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -21,45 +21,30 @@
             android:layout_height="match_parent"
             tools:context=".view.RegisterFragment">
 
-            <!--<androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/primary_pink"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />-->
-
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/register_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
+                android:layout_marginStart="55dp"
                 android:layout_marginTop="148dp"
-                android:layout_marginEnd="148dp"
-                android:layout_marginBottom="8dp"
                 android:text="Register"
                 android:textSize="60dp"
                 app:layout_constraintBottom_toTopOf="@+id/register_card"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/register_card"
                 android:layout_width="match_parent"
-                android:layout_height="580dp"
+                android:layout_height="500dp"
                 android:layout_marginStart="25dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginEnd="25dp"
-                android:layout_marginBottom="35dp"
                 app:cardCornerRadius="15dp"
+                app:cardElevation="4dp"
+                android:layout_marginBottom="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView">
+                app:layout_constraintStart_toStartOf="parent">
 
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -70,10 +55,12 @@
                         android:id="@+id/firstname_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginTop="30dp"
-                        android:layout_marginEnd="15dp"
-                        app:errorEnabled="true"
+                        android:layout_marginStart="20sp"
+                        android:layout_marginTop="20sp"
+                        android:layout_marginEnd="20sp"
+                        android:background="@drawable/edit_text_background"
+                        app:boxStrokeWidth="0dp"
+                        app:boxStrokeWidthFocused="0dp"
                         app:layout_constraintBottom_toTopOf="@+id/surname_field"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -83,6 +70,9 @@
                             android:id="@+id/txtFirstname"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="20sp"
+                            android:layout_marginEnd="20sp"
+                            android:background="@drawable/edit_text_background"
                             android:hint="Firstname"
                             android:inputType="textCapWords"
                             android:text="@={registerViewModel.firstname}"
@@ -93,10 +83,12 @@
                         android:id="@+id/surname_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginTop="25dp"
-                        android:layout_marginEnd="15dp"
-                        app:errorEnabled="true"
+                        android:layout_marginStart="20sp"
+                        android:layout_marginTop="20sp"
+                        android:layout_marginEnd="20dp"
+                        android:background="@drawable/edit_text_background"
+                        app:boxStrokeWidth="0dp"
+                        app:boxStrokeWidthFocused="0dp"
                         app:layout_constraintBottom_toTopOf="@+id/email_field"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -106,6 +98,9 @@
                             android:id="@+id/txtSurname"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="20sp"
+                            android:layout_marginEnd="20sp"
+                            android:background="@drawable/edit_text_background"
                             android:hint="Surname"
                             android:inputType="textCapWords"
                             android:text="@={registerViewModel.surname}" />
@@ -115,10 +110,12 @@
                         android:id="@+id/email_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginTop="25dp"
-                        android:layout_marginEnd="15dp"
-                        app:errorEnabled="true"
+                        android:layout_marginStart="20sp"
+                        android:layout_marginTop="20sp"
+                        android:layout_marginEnd="20sp"
+                        android:background="@drawable/edit_text_background"
+                        app:boxStrokeWidth="0dp"
+                        app:boxStrokeWidthFocused="0dp"
                         app:layout_constraintBottom_toTopOf="@+id/password_field"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -128,6 +125,9 @@
                             android:id="@+id/txtEmail"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="20sp"
+                            android:layout_marginEnd="20sp"
+                            android:background="@drawable/edit_text_background"
                             android:hint="Email"
                             android:inputType="textEmailAddress"
                             android:text="@={registerViewModel.email}" />
@@ -137,10 +137,12 @@
                         android:id="@+id/password_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginTop="25dp"
-                        android:layout_marginEnd="15dp"
-                        app:errorEnabled="true"
+                        android:layout_marginStart="20sp"
+                        android:layout_marginTop="20sp"
+                        android:layout_marginEnd="20sp"
+                        android:background="@drawable/edit_text_background"
+                        app:boxStrokeWidth="0dp"
+                        app:boxStrokeWidthFocused="0dp"
                         app:layout_constraintBottom_toTopOf="@+id/user_type_radio_group"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -151,6 +153,9 @@
                             android:id="@+id/txtPassword"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="20sp"
+                            android:layout_marginEnd="20sp"
+                            android:background="@drawable/edit_text_background"
                             android:hint="Password"
                             android:inputType="textPassword"
                             android:text="@={registerViewModel.password}" />
@@ -160,7 +165,7 @@
                         android:id="@+id/user_type_radio_group"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="25dp"
+                        android:layout_marginTop="20sp"
                         android:orientation="horizontal"
                         app:layout_constraintBottom_toTopOf="@+id/register_button"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -171,6 +176,7 @@
                             android:id="@+id/solo_artist_checkbox"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="20sp"
                             android:layout_marginEnd="10dp"
                             android:onClick="@{()-> registerViewModel.setUserType(UserType.SOLO)}"
                             android:text="Solo Artist" />
@@ -187,18 +193,19 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
+                            android:layout_marginEnd="20sp"
                             android:onClick="@{()-> registerViewModel.setUserType(UserType.VENUE)}"
-                            android:text="Venue Owner" />
+                            android:text="Venue" />
                     </RadioGroup>
 
                     <Button
                         android:id="@+id/register_button"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="25dp"
                         android:layout_marginTop="30dp"
                         android:layout_marginEnd="25dp"
-                        android:layout_marginBottom="34dp"
+                        android:layout_marginBottom="10sp"
                         android:background="@drawable/pill_button"
                         android:backgroundTint="@color/primary_pink"
                         android:onClick="@{()-> registerViewModel.onRegisterClick()}"
