--- a/app/src/main/res/drawable/pill_button_outline.xml
+++ b/app/src/main/res/drawable/pill_button_outline.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="100dp" />
+    <solid android:color="@color/transparent"/>
     <stroke android:color="@color/primary_pink" android:width="2dp"/>
 </shape>
