--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         tools:context=".view.LoginFragment">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,8 +28,10 @@
             app:layout_constraintBottom_toTopOf="@+id/login_card"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="80dp"
+            android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/circleImageView"
             tools:src="@tools:sample/avatars" />
 
         <com.google.android.material.card.MaterialCardView
@@ -39,7 +41,8 @@
             android:layout_marginStart="25dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="25dp"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="50sp"
+            app:cardElevation="4dp"
             app:cardCornerRadius="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -54,14 +57,12 @@
                     android:id="@+id/login_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="25sp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginEnd="253dp"
                     android:layout_marginBottom="10dp"
                     android:text="Login"
-                    android:textSize="30sp"
+                    android:textSize="35dp"
                     app:layout_constraintBottom_toTopOf="@+id/login_field"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -69,9 +70,12 @@
                     android:id="@+id/login_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="20sp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="15dp"
+                    android:layout_marginEnd="20sp"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
+                    android:background="@drawable/edit_text_background"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/login_txt"
@@ -80,6 +84,9 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/edit_text_background"
+                        android:layout_marginStart="20sp"
+                        android:layout_marginEnd="20sp"
                         android:text="@={loginViewModel.email}"
                         android:hint="Email" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -88,9 +95,12 @@
                     android:id="@+id/password_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="20sp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginEnd="15dp"
+                    android:layout_marginEnd="20sp"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
+                    android:background="@drawable/edit_text_background"
                     android:layout_marginBottom="25dp"
                     app:layout_constraintBottom_toTopOf="@+id/login_btn"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -100,6 +110,9 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="20sp"
+                        android:layout_marginEnd="20sp"
+                        android:background="@drawable/edit_text_background"
                         android:hint="Password"
                         android:inputType="textPassword"
                         android:text="@={loginViewModel.password}" />
@@ -109,8 +122,8 @@
                     android:id="@+id/login_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="15dp"
+                    android:layout_marginStart="20sp"
+                    android:layout_marginEnd="20sp"
                     android:layout_marginBottom="20dp"
                     android:text="Login"
                     android:onClick="@{()-> loginViewModel.onLoginClick()}"
@@ -127,7 +140,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
                     android:gravity="center"
-                    android:text="Or"
+                    android:text="or"
                     android:textSize="15dp"
                     app:layout_constraintStart_toEndOf="@id/left_divider"
                     app:layout_constraintEnd_toStartOf="@id/right_divider"
@@ -137,9 +150,9 @@
                     android:id="@+id/left_divider"
                     android:layout_width="150dp"
                     android:layout_height="1dp"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="20sp"
                     android:layout_marginEnd="3dp"
-                    android:background="@color/cardview_dark_background"
+                    android:background="@color/primary_pink"
                     app:layout_constraintBottom_toBottomOf="@+id/or_txt"
                     app:layout_constraintEnd_toStartOf="@id/or_txt"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -150,9 +163,9 @@
                     android:id="@+id/right_divider"
                     android:layout_width="150dp"
                     android:layout_height="1dp"
-                    android:layout_marginEnd="15dp"
+                    android:layout_marginEnd="20sp"
                     android:layout_marginStart="3dp"
-                    android:background="@color/cardview_dark_background"
+                    android:background="@color/primary_pink"
                     app:layout_constraintBottom_toBottomOf="@+id/or_txt"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
@@ -163,13 +176,11 @@
                     android:id="@+id/register_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="25sp"
                     android:layout_marginTop="15dp"
-                    android:layout_marginEnd="217dp"
                     android:text="Register"
                     android:textSize="30sp"
                     app:layout_constraintBottom_toTopOf="@+id/register_button"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/or_txt" />
 
@@ -205,15 +216,18 @@
                         android:text="Venue Owner" />
                 </RadioGroup>-->
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/register_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="20sp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginEnd="15dp"
+                    android:layout_marginEnd="20sp"
+                    android:layout_marginBottom="31dp"
                     android:background="@drawable/pill_button_outline"
                     android:text="Register"
+                    android:textColor="@color/primary_pink"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/register_txt" />
