--- a/app/src/main/res/layout/fragment_solo_setup.xml
+++ b/app/src/main/res/layout/fragment_solo_setup.xml
@@ -29,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="80dp"
+                android:textSize="20sp"
                 android:text="Profile Image"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -63,6 +64,9 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                android:background="@drawable/edit_text_background"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/upload_image_button">
@@ -71,6 +75,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Stage name"
+                    android:layout_marginStart="20sp"
+                    android:layout_marginEnd="20sp"
+                    android:background="@drawable/edit_text_background"
                     android:inputType="textCapSentences"
                     android:text="@={soloSetupViewModel.stageName}" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -95,15 +102,14 @@
                 android:id="@+id/genres_textInputLayout"
                 android:layout_width="180dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="20dp"
-
+                android:background="@drawable/bio_box_outline"
                 android:layout_marginEnd="31dp"
                 android:clickable="false"
                 android:focusable="false"
-                app:layout_constraintBottom_toTopOf="@id/contact_text"
+                app:layout_constraintBottom_toBottomOf="@id/add_genre_button"
                 app:layout_constraintEnd_toStartOf="@+id/add_genre_button"
                 app:layout_constraintStart_toStartOf="@id/bio_editText"
-                app:layout_constraintTop_toBottomOf="@id/bio_editText" />
+                app:layout_constraintTop_toTopOf="@id/add_genre_button" />
 
 
             <com.google.android.material.button.MaterialButton
@@ -112,11 +118,12 @@
                 android:layout_height="60dp"
                 android:layout_marginStart="31dp"
                 android:layout_marginEnd="20dp"
+                android:layout_marginTop="20sp"
                 android:background="@drawable/pill_button"
                 android:hint="Add Genre"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/genres_textInputLayout"
-                app:layout_constraintTop_toTopOf="@id/genres_textInputLayout" />
+                app:layout_constraintTop_toBottomOf="@id/bio_editText" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/contact_text"
@@ -124,14 +131,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
+                android:layout_marginStart="20sp"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                android:background="@drawable/edit_text_background"
                 app:layout_constraintBottom_toTopOf="@id/price_text"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/genres_textInputLayout"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/genres_textInputLayout">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/edit_text_background"
+                    android:layout_marginStart="20sp"
+                    android:layout_marginEnd="20sp"
                     android:hint="Contact Number"
                     android:inputType="number"
                     android:text="@={soloSetupViewModel.contactNumber}" />
@@ -143,13 +157,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="@id/genres_textInputLayout"
-
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                android:background="@drawable/edit_text_background"
                 app:layout_constraintStart_toStartOf="@id/contact_text"
                 app:layout_constraintTop_toBottomOf="@id/contact_text">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/edit_text_background"
+                    android:layout_marginStart="20sp"
+                    android:layout_marginEnd="20sp"
                     android:hint="Price"
                     android:inputType="number"
                     android:text="@={soloSetupViewModel.price}" />
