--- a/app/src/main/res/layout/venue_card.xml
+++ b/app/src/main/res/layout/venue_card.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/profile_image"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="10dp"
@@ -38,11 +38,10 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout3"
-                android:layout_width="220dp"
+                android:layout_width="240dp"
                 android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="5dp"
                 android:layout_marginBottom="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -52,12 +51,11 @@
                 <TextView
                     android:id="@+id/venue_name_text"
                     android:layout_width="wrap_content"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:layout_marginEnd="45dp"
+                    android:layout_marginTop="8dp"
                     android:text="@{venueModel.venueName}"
                     android:textSize="20dp"
-                    app:layout_constraintEnd_toStartOf="@+id/location_pin"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -65,7 +63,7 @@
                     android:id="@+id/location_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="12sp"
                     android:layout_marginEnd="1dp"
                     android:text="Limerick"
                     android:textSize="10sp"
