--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,8 +13,10 @@
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment"
-            app:popEnterAnim="@transition/enter_left_to_right"
-            app:popExitAnim="@transition/exit_right_to_left"/>
+            app:enterAnim="@transition/enter_from_right"
+            app:exitAnim="@transition/exit_to_left"
+            app:popEnterAnim="@transition/enter_from_left"
+            app:popExitAnim="@transition/exit_to_right"/>
         <action
             android:id="@+id/action_loginFragment_to_exploreFragment"
             app:destination="@id/discover"/>
