--- a/app/src/main/res/layout/venue_card.xml
+++ b/app/src/main/res/layout/venue_card.xml
@@ -65,8 +65,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12sp"
                     android:layout_marginEnd="1dp"
-                    android:text="Limerick"
+                    android:text="@{venueModel.city}"
                     android:textSize="10sp"
+                    android:textAlignment="center"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
